hard-gists/4420532/run.log
=== Docker Run Log for 4420532 ===
Started at: Mi 29. Okt 14:38:53 CET 2025

[2025-10-29 14:38:54] START: Running container for 4420532
[2025-10-29 14:38:54] SUCCESS: Container 62ba7d952db8aea49f899f6a05fc150d1b6d2dad54ef68bac42ec18ff183b2ee started for 4420532
=== Container logs for 4420532 ===
  File "/snippet.py", line 101
    except CalledProcessError, e:
           ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4420532 ===
[2025-10-29 14:38:56] INFO: Container 62ba7d952db8aea49f899f6a05fc150d1b6d2dad54ef68bac42ec18ff183b2ee has stopped
